--- a/android/java/res/drawable/vpn_paywall_bg.xml
+++ b/android/java/res/drawable/vpn_paywall_bg.xml
@@ -6,6 +6,6 @@
 -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#3B2A6D"/>
+    <solid android:color="@color/primitive_blurple_20"/>
     <corners android:radius="12dp"/>
 </shape>
