--- a/android/java/res/drawable/vpn_paywall_selected_bg.xml
+++ b/android/java/res/drawable/vpn_paywall_selected_bg.xml
@@ -6,7 +6,7 @@
 -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#4F31A9"/>
+    <solid android:color="@color/primitive_blurple_35"/>
     <corners android:radius="12dp"/>
-    <stroke android:width="2dp" android:color="#545FF8"/>
+    <stroke android:width="2dp" android:color="@color/primitive_blurple_50"/>
 </shape>
