--- a/android/java/res/values/brave_colors.xml
+++ b/android/java/res/values/brave_colors.xml
@@ -403,11 +403,15 @@
     <color name="button_background">#3F39E8</color>
     <color name="primitive_primary_20">#d5dcff</color>
     <color name="primitive_primary_30">#b7c6ff</color>
-    <color name="primitive_primary_70">#3b08c2</color>
-    <color name="primitive_primary_80">#2a118e</color>
 
     <color name="divider_interactive">#545ff8</color>
 
     <color name="location_bar_background_color_for_ntp">#f2f2f2</color>
     <color name="toolbar_background_color_for_ntp">@android:color/white</color>
+
+    <color name="primitive_blurple_10">#0f0663</color>
+    <color name="primitive_blurple_20">#251491</color>
+    <color name="primitive_blurple_35">#3e37d4</color>
+    <color name="primitive_blurple_50">#6261ff</color>
+    <color name="primitive_blurple_95">#efefff</color>
 </resources>
