--- a/android/java/res/layout/vpn_server_item_layout.xml
+++ b/android/java/res/layout/vpn_server_item_layout.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (c) 2024 The Brave Authors. All rights reserved.
+     This Source Code Form is subject to the terms of the Mozilla Public
+     License, v. 2.0. If a copy of the MPL was not distributed with this file,
+     You can obtain one at https://mozilla.org/MPL/2.0/. -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,13 +12,6 @@
     android:layout_marginHorizontal="16dp"
     android:layout_marginVertical="12dp"
     android:orientation="horizontal">
-
-    <TextView
-        android:id="@+id/server_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginEnd="16dp" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -44,22 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:clickable="false"
-        android:focusable="false"
         android:theme="@style/BraveRadioButton"
         android:layout_marginEnd="16dp" />
-
-    <View
-        android:layout_width="1dp"
-        android:layout_height="match_parent"
-        android:background="@color/schemes_outline_variant"
-        android:layout_marginEnd="16dp" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@null"
-        android:layout_gravity="center_vertical"
-        app:srcCompat="@drawable/ic_carat_right" />
 
 </LinearLayout>
