--- a/android/java/res/layout/report_error_page_layout.xml
+++ b/android/java/res/layout/report_error_page_layout.xml
@@ -36,10 +36,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@drawable/transparent_bg_bordered"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="8dp"
         android:layout_marginEnd="8dp"
         android:text="@string/close_text"
         android:textAllCaps="false"
